--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Track your gym workouts, monitor progress, and maintain your fitness streak." />
-    <title>🏋️ Gym Tracker - Workout Progress Monitor</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="description" content="Track your gym workouts." />
+    <title>🏋️ Gym Tracker</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="favicon.ico">
-
   </head>
   <body>
     <div class="app">
@@ -23,7 +21,6 @@
         <div class="card streak-card">
           <h3>🔥 Current Streak</h3>
           <h1 id="streakCount">0</h1>
-
           <div>
             <button onclick="changeStreak(-1)">−</button>
             <button onclick="changeStreak(1)">+</button>
@@ -32,8 +29,8 @@
         </div>
 
         <div class="card">
-          <button onclick="exportWeightCSV()">📊 Export Weight Data</button>
-          <button onclick="exportGymCSV()">📈 Export Gym Data</button>
+          <button onclick="exportWeightCSV()">📊 Export Weight</button>
+          <button onclick="exportGymCSV()">📈 Export Gym</button>
         </div>
       </section>
 
@@ -41,24 +38,49 @@
         <h2 id="dayTitle"></h2>
 
         <div class="card">
-          <label for="gymCheck">
+          <label for="gymCheck" style="display: flex; align-items: center; gap: 10px; cursor: pointer;">
             <input type="checkbox" id="gymCheck" />
-            <strong>Went to the Gym?</strong>
+            <span style="color: #fff; font-size: 1.1rem;">Went to the Gym?</span>
           </label>
         </div>
 
         <div class="card">
           <label for="bodyWeight">Body Weight (kg)</label>
-          <input type="number" id="bodyWeight" placeholder="Enter weight" min="0" step="0.1" />
+          <input type="number" id="bodyWeight" placeholder="0.0" inputmode="decimal" step="0.1" />
         </div>
 
         <div id="exerciseContainer"></div>
 
         <div class="actions">
-          <button onclick="saveWorkout()">💾 Save</button>
-          <button onclick="goHome()">← Back</button>
+          <button onclick="saveWorkout()">💾 Save Workout</button>
+          <button onclick="goHome()" style="background: #333;">← Back</button>
         </div>
       </section>
+    </div>
+
+    <div id="addSetModal" class="modal-overlay hidden">
+      <div class="modal-content">
+        <h3 id="modalTitle">Add Set</h3>
+        
+        <label>Weight (kg)</label>
+        <input type="number" id="modalWeight" inputmode="decimal" placeholder="0" autofocus>
+        
+        <div class="row">
+          <div>
+            <label>Reps</label>
+            <input type="number" id="modalReps" inputmode="numeric" placeholder="0">
+          </div>
+          <div>
+            <label>Sets</label>
+            <input type="number" id="modalSets" inputmode="numeric" value="1">
+          </div>
+        </div>
+
+        <div class="actions">
+          <button onclick="confirmAddSet()">Add</button>
+          <button onclick="closeModal()" class="danger">Cancel</button>
+        </div>
+      </div>
     </div>
 
     <script src="script.js"></script>
