--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="theme-color" content="#000000" />
     <meta name="description" content="Track your gym workouts." />
     <title>🏋️ Gym Tracker</title>
     <link rel="stylesheet" href="style.css" />
@@ -14,8 +17,9 @@
 
         <div class="card">
           <label for="workoutDate">Select Date</label>
-          <input type="date" id="workoutDate" />
+          <input type="date" id="workoutDate" autofocus />
           <button onclick="loadWorkout()">Open Workout</button>
+          <p class="hint" style="color:#aaa; font-size:.9rem; margin-top:8px;">Tip: Press Enter to open, or use <kbd>Ctrl/Cmd+S</kbd> to save. Changes auto-save.</p>
         </div>
 
         <div class="card streak-card">
