--- a/index.html
+++ b/index.html
@@ -2,93 +2,84 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Diary &amp; Notes (Dark)</title>
+    <!-- iOS style sheet -->
+    <link rel="stylesheet" href="style.css" />
+    <!-- PWA manifest -->
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#000000">
+    <!-- enable standalone on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Track your gym workouts." />
-    <link rel="manifest" href="manifest.json" />
-    <link rel="apple-touch-icon" href="icons/icon-192.svg" />
-    <title>🏋️ Gym Tracker</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="apple-touch-icon" href="icon-192.png" />
   </head>
   <body>
-    <div class="app">
-      <section id="home">
-        <h1>🏋️ Gym Tracker</h1>
+    <!-- full-screen splash initially holds a fake calculator -->
+    <div id="splash">
+      <div id="calculator">
+        <input id="calcDisplay" type="text" readonly value="0" />
+        <div class="calc-buttons">
+          <button data-value="7">7</button>
+          <button data-value="8">8</button>
+          <button data-value="9">9</button>
+          <button class="operator" data-value="/">÷</button>
 
-        <div class="card">
-          <label for="workoutDate">Select Date</label>
-          <input type="date" id="workoutDate" autofocus />
-          <button onclick="loadWorkout()">Open Workout</button>
-          <p class="hint" style="color:#aaa; font-size:.9rem; margin-top:8px;">Tip: Tap "Open" to load a date. Changes auto-save. Swipe right on a workout to go back.</p>
-        </div>
+          <button data-value="4">4</button>
+          <button data-value="5">5</button>
+          <button data-value="6">6</button>
+          <button class="operator" data-value="*">×</button>
 
-        <div class="card streak-card">
-          <h3>🔥 Current Streak</h3>
-          <h1 id="streakCount">0</h1>
-          <div>
-            <button onclick="changeStreak(-1)">−</button>
-            <button onclick="changeStreak(1)">+</button>
-            <button onclick="resetStreak()" class="danger">Reset</button>
-          </div>
-        </div>
+          <button data-value="1">1</button>
+          <button data-value="2">2</button>
+          <button data-value="3">3</button>
+          <button class="operator" data-value="-">−</button>
 
-        <div class="card">
-          <button onclick="exportWeightCSV()">📊 Export Weight</button>
-          <button onclick="exportGymCSV()">📈 Export Gym</button>
-        </div>
-      </section>
+          <button data-value="0">0</button>
+          <button data-value=".">.</button>
+          <button id="calcClear">C</button>
+          <button class="operator" data-value="+">+</button>
 
-      <section id="workout" class="hidden">
-        <h2 id="dayTitle"></h2>
-
-        <div class="card">
-          <label for="gymCheck" style="display: flex; align-items: center; gap: 10px; cursor: pointer;">
-            <input type="checkbox" id="gymCheck" />
-            <span style="color: #fff; font-size: 1.1rem;">Went to the Gym?</span>
-          </label>
-        </div>
-
-        <div class="card">
-          <label for="bodyWeight">Body Weight (kg)</label>
-          <input type="number" id="bodyWeight" placeholder="0.0" inputmode="decimal" step="0.1" />
-        </div>
-
-        <div id="exerciseContainer"></div>
-
-        <div class="actions">
-          <button onclick="saveWorkout()">💾 Save Workout</button>
-          <button onclick="goHome()" style="background: #333;">← Back</button>
-        </div>
-      </section>
-    </div>
-
-    <div id="addSetModal" class="modal-overlay hidden">
-      <div class="modal-content">
-        <h3 id="modalTitle">Add Set</h3>
-        
-        <label>Weight (kg)</label>
-        <input type="number" id="modalWeight" inputmode="decimal" placeholder="0" autofocus>
-        
-        <div class="row">
-          <div>
-            <label>Reps</label>
-            <input type="number" id="modalReps" inputmode="numeric" placeholder="0">
-          </div>
-          <div>
-            <label>Sets</label>
-            <input type="number" id="modalSets" inputmode="numeric" value="1">
-          </div>
-        </div>
-
-        <div class="actions">
-          <button onclick="confirmAddSet()">Add</button>
-          <button onclick="closeModal()" class="danger">Cancel</button>
+          <button id="calcEquals" style="grid-column: span 4;">=</button>
         </div>
       </div>
     </div>
+    <div class="container" style="display:none;">
+      <div id="header">
+        <button id="conceptBtn" title="Concepts" aria-label="Concepts">📚</button>
+        <div id="dateDisplay"></div>
+        <input type="date" id="dateInput" style="display:none;" />
+        <button id="lockBtn" title="Lock" aria-label="Lock">🔒</button>
+      </div>
+      <div id="writingArea">
+        <textarea id="diaryText" placeholder="Start writing..."></textarea>
+      </div>
+    </div>
 
+    <div id="conceptView">
+      <div class="concept-wrapper">
+        <div class="concept-header">
+          <button id="backToDiary">←</button>
+          <h2>Concepts</h2>
+        </div>
+
+        <div class="concept-input-area">
+          <input id="conceptName" placeholder="Concept title">
+          <textarea id="conceptText" placeholder="Write your understanding..."></textarea>
+          <button id="saveConcept">Add</button>
+          <button id="showConcepts">Show</button>
+          <button id="hideConcepts" style="display:none;">Hide</button>
+        </div>
+
+        <div id="conceptList" class="concept-grid"></div>
+      </div>
+    </div>
     <script src="script.js"></script>
+    <script>
+      // register service worker if supported
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('sw.js').catch(console.error);
+      }
+    </script>
   </body>
 </html>
